Added clothings scaffold and models

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,3 +19,6 @@
   <%= link_to('Register', new_user_registration_path)  %>
   </li>
 <% end %>
+<li>
+<%= link_to('Search Clothes', @clothings) %>
+</li> 
