--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -41,4 +41,5 @@
 </p>
 
 <%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', '/' %>
+<%= link_to 'Back', '/' %> |
+<%= link_to 'Post Ad', new_clothing_path %>
