--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -42,7 +42,9 @@
 
 <p>
   <strong>Image data:</strong>
-  <%= @clothing.image_data %>
+  <% if @clothing.image.present? %>
+    <%= image_tag @clothing.image[:medium].url %>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_clothing_path(@clothing) %> |
