--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,3 +22,10 @@
 <li>
 <%= link_to('Search Clothes', @clothings) %>
 </li> 
+
+<%# #putting here for later on %>
+<%= form_tag("/search", method: "get") do %>
+  <%= label_tag(:q, "Search for:") %>
+  <%= text_field_tag(:q) %>
+  <%= submit_tag("Search") %>
+<% end %>
