Shrine image display issue fixed

--- a/app/views/clothings/_form.html.erb
+++ b/app/views/clothings/_form.html.erb
@@ -50,9 +50,9 @@
   </div>
 
   <div class="field">
-    <%= form.label :image %>
+    <%= form.label :image_data %>
     <%= form.hidden_field :image, value: @clothing.cached_image_data %>
-    <%= form.file_field :image %>
+    <%= form.file_field :image, id: :photo_image_data %>
   </div>
 
   <div class="actions">
