--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -42,4 +42,5 @@
 
 <%= link_to 'Edit', edit_profile_path(@profile) %> |
 <%= link_to 'Back', '/' %> |
-<%= link_to 'Post Ad', new_clothing_path %>
+<%= link_to 'Post Ad', new_clothing_path %> |
+<%= link_to 'My Ads' %>
