--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Posted by:</strong>
+  <%# <%= @profile.first_name %> 
+</p>
+
+<p>
   <strong>Title:</strong>
   <%= @clothing.title %>
 </p>
@@ -12,17 +17,17 @@
 
 <p>
   <strong>Clothing type:</strong>
-  <%= @clothing.clothing_type_id %>
+  <%= @clothing.clothing_type %>
 </p>
 
 <p>
   <strong>Gender:</strong>
-  <%# <%= @clothing.gender %> 
+  <%= @clothing.gender %>
 </p>
 
 <p>
   <strong>Clothing size:</strong>
-  <%# <%= @clothing.clothing_size %>
+  <%= @clothing.clothing_size %>
 </p>
 
 <p>
@@ -43,4 +48,5 @@
 </p>
 
 <%= link_to 'Edit', edit_clothing_path(@clothing) %> |
-<%= link_to 'Back', clothings_path %>
+<%= link_to 'Back', clothings_path %> |
+<%= link_to 'Delete', @clothing, method: :delete, data: { confirm: 'Are you sure?' }  %>
