--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -11,10 +11,9 @@
     </div>
   <% end %>
 
-  <%# <div class="field"> %>
-    <%# <%= form.label :user_id %> 
-    <%# <%= form.text_field :user_id, id: :profile_user_id %> 
-  <%# </div> %>
+  <div class="field">
+    <%= form.label :user_id %>
+    <%= @profile.user_id %>
 
   <div class="field">
     <%= form.label :first_name %>
