--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -17,12 +17,12 @@
 
 <p>
   <strong>Clothing type:</strong>
-  <%= @clothing.clothing_type_id %>
+  <%= @clothing_type.clothing_category %>
 </p>
 
 <p>
   <strong>Gender:</strong>
-  <%= @clothing.gender_id.gender_style %>
+  <%= @gender.gender_style %>
 </p>
 
 <p>
