--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
 
 <% if user_signed_in? %>
   <li>
-  <%= link_to('Profile', edit_profile_path(current_user)) %>
+  <%= link_to('Profile', new_profile_path) %>
   </li>
 <% else %>
   <li>
