--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -7,33 +7,23 @@
   <%= text_field_tag(:q) %>
   <%= submit_tag("Search") %>
 <% end %>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Item price</th>
-      <th>Image data</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @clothings.each do |clothing| %>
-      <tr>
-        <td><%= clothing.title %></td>
-        <td><%= clothing.item_price %></td>
-        <td><% if clothing.image.present? %>
-            <%= image_tag clothing.image_url(:medium) %>
-            <% end %> </td>
-        <td><%= link_to 'Show', clothing %></td>
-        <td><%= link_to 'Edit', edit_clothing_path(clothing) %></td>
-        <td><%= link_to 'Delete', clothing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  
+<% @clothings.each do |clothing| %>
+  <div class="row">  
+    <% if clothing.image.present? %>
+        <%= image_tag clothing.image_url(:medium) %>
+        <% end %>
+    <br>
+    <%= clothing.title %>
+    <br>
+     <%='Price:'%>
+    <%= number_to_currency(clothing.item_price) %>
+    <br>
+    <%= link_to 'Show', clothing %>
+        <% end %>
+  </div>
 
 <br>
-
+<%# <td><%= link_to 'Edit', edit_clothing_path(clothing) %>
+<%# <td><%= link_to 'Delete', clothing, method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to 'New Clothing', new_clothing_path %>
