--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -42,7 +42,7 @@
 
 <p>
   <strong>Image data:</strong>
-  <% if @clothing.image.present? %>
+  <% if @clothing.image_data.present? %>
     <%= image_tag @clothing.image_url(:medium) %>
   <% end %>
 </p>
