--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,11 @@
    text-decoration: none;
 }
 
+html, body {
+    margin: 0;
+    padding: 0;
+}
+
 
 h1 {
     font-family: 'Playfair Display', serif;
