Contact page added

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,1 +1,17 @@
-<h1> Contact Page </h1>
+<div class="contactform">
+<br><br><br>
+<h1>contact us</h1>
+<br>
+<div class="container">
+
+  <form action="/action_page.php">
+    <input type="text" id="name" name="name" placeholder="Your name..">
+<br><br>
+    <input type="text" id="email" name="email" placeholder="Your email address..">
+<br><br>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+<br><br>
+    <input type="submit" value="Submit">
+  </form>
+</div>
+</div>
