--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,14 +28,21 @@ html, body {
     padding: 0;
 }
 
-
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 48px;
- }
+}
 
 p {
     font-size: 16px;
+}
+
+.deviseform {
+    text-align: center;
+}
+
+.contactform {
+    text-align: center;
 }
  
 .logo {
@@ -56,8 +63,9 @@ p {
     top: 0;
     border-left: none;
     float: center;
-    
+    margin-left: 0;
 }
+
 .navbar:link {
     color: black;
 }
