--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,5 @@
-<br>
+<div class="deviseform">
+<br><br><br>
 <h1>register</h1>
 <br>
 
@@ -6,20 +7,24 @@
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label 'Email:' %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
+  <br>
+
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label 'Password:' %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" %>
   </div>
 
+  <br>
+
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label 'Confirm Password:' %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
 
@@ -28,8 +33,6 @@
   </div>
 <% end %>
 
-
-
 <%= render "devise/shared/links" %>
 
-
+</div>
