--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,6 +41,14 @@ p {
     text-align: center;
 }
 
+.profileform {
+    text-align: center;
+}
+
+.clothingform {
+    text-align: center;
+}
+
 .contactform {
     text-align: center;
 }
