--- a/app/views/clothings/edit.html.erb
+++ b/app/views/clothings/edit.html.erb
@@ -1,8 +1,13 @@
-<br>
+<div class='clothingform'>
+<br><br><br>
 
-<h1>Editing Clothing</h1>
+<h1>edit your ad</h1>
+
+<br>
 
 <%= render 'form', clothing: @clothing %>
 
 <%= link_to 'Show', @clothing %> |
 <%= link_to 'Back', clothings_path %>
+
+</div>
