--- a/app/views/clothings/new.html.erb
+++ b/app/views/clothings/new.html.erb
@@ -1,7 +1,12 @@
-<br>
+<div class='clothingform'>
+<br><br><br>
 
-<h1>New Clothing</h1>
+<h1>new clothing</h1>
+
+<br>
 
 <%= render 'form', clothing: @clothing %>
 
 <%= link_to 'Back' %>
+
+</div>
