--- a/app/views/clothings/show.html.erb
+++ b/app/views/clothings/show.html.erb
@@ -1,4 +1,5 @@
-<br>
+<div class='clothingform'>
+<br><br><br>
 
 <p id="notice"><%= notice %></p>
 
@@ -56,3 +57,5 @@
 <%= link_to 'Edit', edit_clothing_path %> |
 <%= link_to 'Back', clothings_path %> |
 <%= link_to 'Delete', @clothing, method: :delete, data: { confirm: 'Are you sure?' }  %>
+
+</div>
