--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,8 +1,9 @@
-<br>
+<div class='profileform'>
+<br><br><br>
 
 <h1>Editing Profile</h1>
 
-<%= render 'form', profile: @profile %>
+<br>
 
-<%= link_to 'Show', @profile %>
-<%= link_to 'Back', profiles_path %>
+<%= render 'form', profile: @profile %>
+</div>
