--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -1,8 +1,10 @@
-<br>
+<div class='clothingform'>
+<br><br><br>
 
 <p id="notice"><%= notice %></p>
 
-<h1>Clothing</h1>
+<h1>find your new clothes</h1>
+<br>
 
 <%= form_tag("/search", method: "get") do %>
   <%= label_tag(:q, "Search for:") %>
@@ -29,3 +31,4 @@
 <%# <td><%= link_to 'Edit', edit_clothing_path(clothing) %>
 <%# <td><%= link_to 'Delete', clothing, method: :delete, data: { confirm: 'Are you sure?' } %>
 <%= link_to 'New Clothing', new_clothing_path %>
+</div>
