--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -12,46 +12,42 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :user_id %>
-    <%= @profile.user_id %>
-
-  <div class="field">
-    <%= form.label :first_name %>
+    <%= form.label 'First Name:' %>
     <%= form.text_field :first_name, id: :profile_first_name %>
   </div>
 
   <div class="field">
-    <%= form.label :last_name %>
+    <%= form.label 'Last Name:' %>
     <%= form.text_field :last_name, id: :profile_last_name %>
   </div>
 
   <div class="field">
-    <%= form.label :address %>
+    <%= form.label 'Address:' %>
     <%= form.text_field :address, id: :profile_address %>
   </div>
 
   <div class="field">
-    <%= form.label :suburb %>
+    <%= form.label 'Suburb:' %>
     <%= form.text_field :suburb, id: :profile_suburb %>
   </div>
 
   <div class="field">
-    <%= form.label :postcode %>
+    <%= form.label 'Postcode:' %>
     <%= form.text_field :postcode, id: :profile_postcode %>
   </div>
 
   <div class="field">
-    <%= form.label :state %>
+    <%= form.label 'State:' %>
     <%= form.text_field :state, id: :profile_state %>
   </div>
 
   <div class="field">
-    <%= form.label :buyer %>
+    <%= form.label 'Are you a buyer?' %>
     <%= form.check_box :buyer, id: :profile_buyer %>
   </div>
 
   <div class="field">
-    <%= form.label :seller %>
+    <%= form.label 'Are you selling clothes?' %>
     <%= form.check_box :seller, id: :profile_seller %>
   </div>
 
