--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,9 @@
-<br>
+<div class='profileform'>
+<br><br><br>
 <p id="notice"><%= notice %></p>
 <h1> My Profile </h1>
 
-<br><br>
+<br>
 
 <p>
   <strong>First name:</strong>
@@ -43,8 +44,8 @@
   <strong>Seller:</strong>
   <%= @profile.seller %>
 </p>
+<br>
 
 <%= link_to 'Edit', edit_profile_path(@profile) %> |
-<%= link_to 'Back', '/' %> |
-<%= link_to 'Post Ad', new_clothing_path %> |
-<%= link_to 'My Ads' %>
+<%= link_to 'Post Ad', new_clothing_path %>
+</div>
