Devise permissions updated

--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -3,7 +3,7 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>find your new clothes</h1>
+<h1>find your new favourtie piece</h1>
 <br>
 
 <%= form_tag("/search", method: "get") do %>
@@ -30,5 +30,4 @@
 <br>
 <%# <td><%= link_to 'Edit', edit_clothing_path(clothing) %>
 <%# <td><%= link_to 'Delete', clothing, method: :delete, data: { confirm: 'Are you sure?' } %>
-<%= link_to 'New Clothing', new_clothing_path %>
 </div>
