--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,16 +3,16 @@
 <%= image_tag("clothesloversunite.png", class: "logo", alt: "Logo") %>
 </div>
 
-
 <div class='hometext'>
 A space for clothes lovers to buy and sell pre loved clothing from the comfort of their home.
 <br>
 Sell you loved pieces to someone who will love them as much as you. 
 <br>
-Buy another clothes lovers treasures pieces.
+Buy another clothes lovers treasured pieces.
 <br>
 The best part....all items are $10 and under.
 </div>
+
 
 
 
