--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,34 +1,38 @@
 <div class ='navbar' style="width:100%">
 
-<button style="width:20%">
+<button style="width:16.6%">
 <%= link_to('Home', '/') %>
 </button>
 
-<button style="width:20%">
-<%= link_to('Search Clothes', clothings_path) %>
+<button style="width:16.6%">
+<%= link_to('Buy Clothes', clothings_path) %>
+</button>
+
+<button style="width:16.6%">
+<%= link_to('Sell Clothes', new_clothing_path) %>
 </button>
 
 <% if user_signed_in? %>
-<button style="width:20%">
+<button style="width:16.6%">
   <%= link_to('Logout', destroy_user_session_path, method: :delete) %>        
 </button>
 <% else %>
-<button style="width:20%">
+<button style="width:16.6%">
   <%= link_to('Login', new_user_session_path)  %>  
 </button>
 <% end %>
 
 <% if user_signed_in? %>
-<button style="width:20%">
+<button style="width:16.6%">
   <%= link_to('Profile', new_profile_path) %>
 </button>
 <% else %>
-<button style="width:20%">
+<button style="width:16.6%">
   <%= link_to('Register', new_user_registration_path)  %>
 </button>
 <% end %>
   
-<button style="width:20%">
+<button style="width:16.6%">
 <%= link_to('Contact Us', '/pages/contact') %>
 </button>
 </div>
