--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,9 +2,10 @@
 <br><br><br>
 <h1>contact us</h1>
 <br>
+
 <div class="container">
 
-  <form action="/action_page.php">
+  <form action="/">
     <input type="text" id="name" name="name" placeholder="Your name..">
 <br><br>
     <input type="text" id="email" name="email" placeholder="Your email address..">
