--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,9 +8,9 @@ A space for clothes lovers to buy and sell pre loved clothing from the comfort o
 <br>
 Sell you loved pieces to someone who will love them as much as you. 
 <br>
-Buy another clothes lovers treasured pieces.
+Buy another 'clothes lovers' treasured pieces.
 <br>
-The best part....all items are $10 and under.
+The BEST part....all items are $10 and under!!
 </div>
 
 
