--- a/app/views/clothings/index.html.erb
+++ b/app/views/clothings/index.html.erb
@@ -3,14 +3,19 @@
 
 <p id="notice"><%= notice %></p>
 
-<h1>find your new favourtie piece</h1>
+<h1>find your new favourite piece</h1>
 <br>
 
-<%= form_tag("/search", method: "get") do %>
-  <%= label_tag(:q, "Search for:") %>
-  <%= text_field_tag(:q) %>
-  <%= submit_tag("Search") %>
+<%= form_tag(clothings_path, :method => "get", id: "search-form") do %>
+    <%= text_field_tag :search, params[:search], placeholder: "Search Clothes" %>
+    <%= submit_tag "Search", :name => nil %>
 <% end %>
+
+<% if @clothings.blank? %>
+  <h4>There are no items containing the term <%= params[:search] %>.</h4>
+<% end %>
+
+  <br>
   
 <% @clothings.each do |clothing| %>
   <div class="row">  
