Grammar mistakes corrected

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -42,12 +42,12 @@
   </div>
 
   <div class="field">
-    <%= form.label 'Are you a buyer?' %>
+    <%= form.label 'Would you like to buy clothes?' %>
     <%= form.check_box :buyer, id: :profile_buyer %>
   </div>
 
   <div class="field">
-    <%= form.label 'Are you selling clothes?' %>
+    <%= form.label 'Would you like to sell clothes?' %>
     <%= form.check_box :seller, id: :profile_seller %>
   </div>
 
